--- a/index.html
+++ b/index.html
@@ -1,1 +1,260 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Birthday Richa</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f0f8ff;
+            overflow-x: hidden;
+            scroll-behavior: smooth;
+        }
+        header {
+            text-align: center;
+            padding: 20px;
+            background: linear-gradient(90deg, rgba(255,183,77,1) 0%, rgba(255,138,101,1) 100%);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        /* Glowing text */
+        .glowing-text {
+            font-size: 48px;
+            color: #fff;
+            animation: glow 1.5s ease-in-out infinite alternate;
+            text-shadow: 0 0 10px #ff9d00, 0 0 20px #ff9d00, 0 0 30px #ff9d00, 
+                         0 0 40px #ff9d00, 0 0 50px #ff9d00, 0 0 60px #ff9d00, 0 0 70px #ff9d00;
+        }
+        @keyframes glow {
+            0% {
+                text-shadow: 0 0 10px #ff9d00, 0 0 20px #ff9d00, 0 0 30px #ff9d00, 
+                             0 0 40px #ff9d00, 0 0 50px #ff9d00, 0 0 60px #ff9d00, 0 0 70px #ff9d00;
+            }
+            100% {
+                text-shadow: 0 0 20px #ff7200, 0 0 30px #ff7200, 0 0 40px #ff7200, 
+                             0 0 50px #ff7200, 0 0 60px #ff7200, 0 0 70px #ff7200, 0 0 80px #ff7200;
+            }
+        }
+
+        /* Birthday person image */
+        .circle-img {
+            display: block;
+            margin: 20px auto;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            border: 5px solid #ffcc00;
+            animation: bounce 2s infinite;
+        }
+        @keyframes bounce {
+            0%, 100% {
+                transform: translateY(0);
+            }
+            50% {
+                transform: translateY(-20px);
+            }
+        }
+
+        /* Slideshow for images */
+        .slideshow-container {
+            max-width: 1000px;
+            position: relative;
+            margin: auto;
+            border: 5px solid #ff9d00;
+            border-radius: 15px;
+            overflow: hidden;
+        }
+        .mySlides {
+            display: none;
+        }
+        .slideshow-container img {
+            width: 100%;
+            border-radius: 10px;
+            animation: slideIn 1s ease-in-out;
+        }
+
+        @keyframes slideIn {
+            0% {
+                transform: translateX(100%);
+            }
+            100% {
+                transform: translateX(0);
+            }
+        }
+
+        /* Friend wishes section */
+        .wish-section {
+            padding: 20px;
+            text-align: center;
+            background-color: #ffe4e1;
+        }
+        .wish-card {
+            margin: 20px;
+            padding: 15px;
+            border: 2px solid #ffcc33;
+            border-radius: 10px;
+            display: inline-block;
+            width: 200px;
+            background-color: #fff8dc;
+            animation: flipIn 1s ease-in-out;
+        }
+        @keyframes flipIn {
+            0% {
+                transform: rotateY(90deg);
+                opacity: 0;
+            }
+            100% {
+                transform: rotateY(0);
+                opacity: 1;
+            }
+        }
+        .wish-card img {
+            width: 100%;
+            height: auto;
+            border-radius: 50%;
+            margin-bottom: 10px;
+        }
+        .wish-card p {
+            margin-top: 5px;
+            font-size: 16px;
+            color: #333;
+        }
+
+        /* Music Player */
+        .music-section {
+            text-align: center;
+            margin: 20px 0;
+        }
+        .music-text {
+            font-size: 18px;
+            color: #ff9d00;
+            margin-bottom: 10px;
+        }
+        .music-controller {
+            background-color: #ffcc33;
+            padding: 10px;
+            border-radius: 10px;
+            display: inline-block;
+        }
+        audio {
+            width: 300px;
+            outline: none;
+        }
+
+        /* Quiz Button */
+        .quiz-button {
+            display: block;
+            text-align: center;
+            margin: 20px 0;
+        }
+        .quiz-button a {
+            background-color: #ff9d00;
+            color: white;
+            padding: 15px 30px;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 10px;
+            transition: background-color 0.3s ease;
+        }
+        .quiz-button a:hover {
+            background-color: #ff7200;
+        }
+
+        /* Responsive Layout */
+        @media screen and (max-width: 768px) {
+            .glowing-text {
+                font-size: 36px;
+            }
+            .wish-card {
+                width: 150px;
+            }
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1 class="glowing-text">Happy Birthday Richa!</h1>
+    </header>
+
+    <!-- Birthday person image -->
+    <img src="Richa.jpeg" alt="Richa's Picture" class="circle-img">
+
+    <!-- Slideshow for images -->
+    <div class="slideshow-container">
+        <div class="mySlides">
+            <img src="Richa.jpeg" alt="Memory 1">
+        </div>
+        <div class="mySlides">
+            <img src="img2.jpg" alt="Memory 2">
+        </div>
+        <div class="mySlides">
+            <img src="img3.jpg" alt="Memory 3">
+        </div>
+        <div class="mySlides">
+            <img src="img4.jpg" alt="Memory 4">
+        </div>
+        <div class="mySlides">
+            <img src="img5.jpg" alt="Memory 5">
+        </div>
+    </div>
+
+    <!-- Friend wishes -->
+    <div class="wish-section">
+        <div class="wish-card">
+            <img src="Richa.jpeg" alt="Friend 1">
+            <p><strong>Sachin:</strong> Wishing you the happiest birthday!</p>
+        </div>
+        <div class="wish-card">
+            <img src="friend2.jpg" alt="Friend 2">
+            <p><strong>Vaibhavi:</strong> Hope you have an amazing day, Richa!</p>
+        </div>
+        <div class="wish-card">
+            <img src="friend3.jpg" alt="Friend 3">
+            <p><strong>Aly:</strong> Best wishes for a fantastic year ahead!</p>
+        </div>
+        <div class="wish-card">
+            <img src="friend4.jpg" alt="Friend 4">
+            <p><strong>Ary:</strong> Happy Birthday, stay awesome!</p>
+        </div>
+    </div>
+
+    <!-- Music Section -->
+    <div class="music-section">
+        <p class="music-text">Music for you!</p>
+        <div class="music-controller">
+            <audio controls autoplay loop>
+                <source src="birthdayrich.mpeg" type="audio/mpeg">
+                Your browser does not support the audio element.
+            </audio>
+        </div>
+    </div>
+
+    <!-- Quiz Button -->
+    <div class="quiz-button">
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSf5Cql40yl-wLhl0FQN_rSqfzIvaIt2BeZEVNSJiwxTD2jdWg/viewform?embedded=true" target="_blank">Take the Quiz!</a>
+    </div>
+
+    <script>
+        // Slideshow function
+        let slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            let slides = document.getElementsByClassName("mySlides");
+            for (let i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";  
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {
+                slideIndex = 1;
+            }    
+            slides[slideIndex - 1].style.display = "block";  
+            setTimeout(showSlides, 4000); // Change image every 4 seconds
+        }
