--- a/index.html
+++ b/index.html
@@ -208,19 +208,19 @@
     <!-- Friend wishes -->
     <div class="wish-section">
         <div class="wish-card">
-            <img src="Richa.jpeg" alt="Friend 1">
+            <img src="sacimg.jpeg" alt="Friend 1">
             <p><strong>Sachin:</strong> Wishing you the happiest birthday!</p>
         </div>
         <div class="wish-card">
-            <img src="friend2.jpg" alt="Friend 2">
+            <img src="friend2.jpeg" alt="Friend 2">
             <p><strong>Vaibhavi:</strong> Hope you have an amazing day, Richa!</p>
         </div>
         <div class="wish-card">
-            <img src="friend3.jpg" alt="Friend 3">
+            <img src="Alyimg.jpeg" alt="Friend 3">
             <p><strong>Aly:</strong> Best wishes for a fantastic year ahead!</p>
         </div>
         <div class="wish-card">
-            <img src="friend4.jpg" alt="Friend 4">
+            <img src="aryimg.jpeg" alt="Friend 4">
             <p><strong>Ary:</strong> Happy Birthday, stay awesome!</p>
         </div>
     </div>
