--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <div class="wish-section">
         <div class="wish-card">
             <img src="sacimg.jpeg" alt="Friend 1">
-            <p><strong>Sachin:</strong> Wishing you the happiest birthday!</p>
+            <p><strong>Sachin:</strong> Happy Birthday! Hope your day is filled with exciting moments and tech surprises. May this year bring you closer to your dreams in AI and on the basketball court!</p>
         </div>
         <div class="wish-card">
             <img src="friend2.jpeg" alt="Friend 2">
@@ -217,11 +217,11 @@
         </div>
         <div class="wish-card">
             <img src="Alyimg.jpeg" alt="Friend 3">
-            <p><strong>Aly:</strong> Best wishes for a fantastic year ahead!</p>
+            <p><strong>Aly:</strong> Wishing you a wonderful birthday! May this year be filled with unforgettable moments on the court and breakthroughs in tech and AI. Keep shining bright !</p>
         </div>
         <div class="wish-card">
             <img src="aryimg.jpeg" alt="Friend 4">
-            <p><strong>Ary:</strong> Happy Birthday, stay awesome!</p>
+            <p><strong>Ary:</strong> Wishing you a fantastic birthday! May your year ahead be as thrilling as a game-winning shot and as innovative as the latest tech trends. Let’s keep shooting for the stars!"</p>
         </div>
     </div>
 
