--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,7 +22,6 @@
             background: linear-gradient(90deg, rgba(255,183,77,1) 0%, rgba(255,138,101,1) 100%);
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
-        /* Glowing text */
         .glowing-text {
             font-size: 48px;
             color: #fff;
@@ -42,7 +40,6 @@
             }
         }
 
-        /* Birthday person image */
         .circle-img {
             display: block;
             margin: 20px auto;
@@ -61,34 +58,6 @@
             }
         }
 
-        /* Slideshow for images */
-        .slideshow-container {
-            max-width: 1000px;
-            position: relative;
-            margin: auto;
-            border: 5px solid #ff9d00;
-            border-radius: 15px;
-            overflow: hidden;
-        }
-        .mySlides {
-            display: none;
-        }
-        .slideshow-container img {
-            width: 100%;
-            border-radius: 10px;
-            animation: slideIn 1s ease-in-out;
-        }
-
-        @keyframes slideIn {
-            0% {
-                transform: translateX(100%);
-            }
-            100% {
-                transform: translateX(0);
-            }
-        }
-
-        /* Friend wishes section */
         .wish-section {
             padding: 20px;
             text-align: center;
@@ -126,7 +95,29 @@
             color: #333;
         }
 
-        /* Music Player */
+        .gallery-container {
+            max-width: 1000px;
+            margin: auto;
+            padding: 20px;
+            text-align: center;
+        }
+        .gallery-images {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+        }
+        .gallery-images img {
+            width: 200px;
+            height: auto;
+            border-radius: 10px;
+            border: 3px solid #ff9d00;
+            transition: transform 0.2s;
+        }
+        .gallery-images img:hover {
+            transform: scale(1.05);
+        }
+
         .music-section {
             text-align: center;
             margin: 20px 0;
@@ -147,7 +138,6 @@
             outline: none;
         }
 
-        /* Quiz Button */
         .quiz-button {
             display: block;
             text-align: center;
@@ -166,7 +156,6 @@
             background-color: #ff7200;
         }
 
-        /* Responsive Layout */
         @media screen and (max-width: 768px) {
             .glowing-text {
                 font-size: 36px;
@@ -183,29 +172,8 @@
         <h1 class="glowing-text">Happy Birthday Richa!</h1>
     </header>
 
-    <!-- Birthday person image -->
     <img src="Richa.jpeg" alt="Richa's Picture" class="circle-img">
 
-    <!-- Slideshow for images -->
-    <div class="slideshow-container">
-        <div class="mySlides">
-            <img src="Richa.jpeg" alt="Memory 1">
-        </div>
-        <div class="mySlides">
-            <img src="img2.jpg" alt="Memory 2">
-        </div>
-        <div class="mySlides">
-            <img src="img3.jpg" alt="Memory 3">
-        </div>
-        <div class="mySlides">
-            <img src="img4.jpg" alt="Memory 4">
-        </div>
-        <div class="mySlides">
-            <img src="img5.jpg" alt="Memory 5">
-        </div>
-    </div>
-
-    <!-- Friend wishes -->
     <div class="wish-section">
         <div class="wish-card">
             <img src="sacimg.jpeg" alt="Friend 1">
@@ -213,19 +181,31 @@
         </div>
         <div class="wish-card">
             <img src="friend2.jpeg" alt="Friend 2">
-            <p><strong>Vaibhavi:</strong> Hope you have an amazing day, Richa!</p>
+            <p><strong>Vaibhavi:</strong> Happiest Birthday Richa!♥️
+Enjoy your special day to the fullest!!☺️
+ Again  ,Happy birthday to my gorgeous, smart, and loyal friend. Live your dreams.🫶🏻 </p>
         </div>
         <div class="wish-card">
             <img src="Alyimg.jpeg" alt="Friend 3">
-            <p><strong>Aly:</strong> Wishing you a wonderful birthday! May this year be filled with unforgettable moments on the court and breakthroughs in tech and AI. Keep shining bright !</p>
+            <p><strong>Aly:</strong> Wishing you a wonderful birthday! May this year be filled with unforgettable moments on the court and breakthroughs in tech and AI. Keep shining bright!</p>
         </div>
         <div class="wish-card">
             <img src="aryimg.jpeg" alt="Friend 4">
-            <p><strong>Ary:</strong> Wishing you a fantastic birthday! May your year ahead be as thrilling as a game-winning shot and as innovative as the latest tech trends. Let’s keep shooting for the stars!"</p>
+            <p><strong>Ary:</strong> Wishing you a fantastic birthday! May your year ahead be as thrilling as a game-winning shot and as innovative as the latest tech trends. Let’s keep shooting for the stars!</p>
         </div>
     </div>
 
-    <!-- Music Section -->
+    <div class="gallery-container">
+        <h2>Memories Gallery</h2>
+        <div class="gallery-images">
+            <img src="Richa.jpeg" alt="Memory 1">
+            <img src="img2.jpg" alt="Memory 2">
+            <img src="img3.jpg" alt="Memory 3">
+            <img src="img4.jpg" alt="Memory 4">
+            <img src="img5.jpg" alt="Memory 5">
+        </div>
+    </div>
+
     <div class="music-section">
         <p class="music-text">Music for you!</p>
         <div class="music-controller">
@@ -236,25 +216,9 @@
         </div>
     </div>
 
-    <!-- Quiz Button -->
     <div class="quiz-button">
         <a href="https://docs.google.com/forms/d/e/1FAIpQLSf5Cql40yl-wLhl0FQN_rSqfzIvaIt2BeZEVNSJiwxTD2jdWg/viewform?embedded=true" target="_blank">Take the Quiz!</a>
     </div>
 
-    <script>
-        // Slideshow function
-        let slideIndex = 0;
-        showSlides();
-
-        function showSlides() {
-            let slides = document.getElementsByClassName("mySlides");
-            for (let i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";  
-            }
-            slideIndex++;
-            if (slideIndex > slides.length) {
-                slideIndex = 1;
-            }    
-            slides[slideIndex - 1].style.display = "block";  
-            setTimeout(showSlides, 4000); // Change image every 4 seconds
-        }
+</body>
+</html>
