--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <p><strong>Sachin:</strong> Happy Birthday! Hope your day is filled with exciting moments and tech surprises. May this year bring you closer to your dreams in AI and on the basketball court!</p>
         </div>
         <div class="wish-card">
-            <img src="friend2.jpeg" alt="Friend 2">
+            <img src="vaibhavir.jpeg" alt="Friend 2">
             <p><strong>Vaibhavi:</strong> Happiest Birthday Richa!♥️
 Enjoy your special day to the fullest!!☺️
  Again  ,Happy birthday to my gorgeous, smart, and loyal friend. Live your dreams.🫶🏻 </p>
@@ -199,10 +199,10 @@ Enjoy your special day to the fullest!!☺️
         <h2>Memories Gallery</h2>
         <div class="gallery-images">
             <img src="Richa.jpeg" alt="Memory 1">
-            <img src="img2.jpg" alt="Memory 2">
-            <img src="img3.jpg" alt="Memory 3">
-            <img src="img4.jpg" alt="Memory 4">
-            <img src="img5.jpg" alt="Memory 5">
+            <img src="richacluster.jpeg" alt="Memory 2">
+            <img src="richam.jpeg" alt="Memory 3">
+            <img src="richatd.jpeg" alt="Memory 4">
+            <img src="richat.jpeg" alt="Memory 5">
         </div>
     </div>
 
